--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,9 @@
             <a href="#"><i class="material-icons-outlined">person</i> <span>Profile</span></a>
             <button class="tweet-button" id="btn">Post</button>
         </div>
+        <!-- <span class="material-symbols-outlined">
+            border_color
+            </span> -->
     </header>
 
 
