--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,7 +11,10 @@
         <div class="Logo">
         <span class="Name">Talent <span>hub</span></span>
     </div>
-        <form action="/inscription" method="post">
+        <form action="/signup" method="post">
+            {{ if .ErrorMessage }}
+            <div class="error-message">{{ .ErrorMessage }}</div>
+            {{ end }}
             <div class="form-control">
                 <input type="text" name="username" required>
                 <label>Username</label>
