--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,14 +13,14 @@
     </div>
         <form action="/signup" method="post">
             {{ if .ErrorMessage }}
-            <div class="error-message">{{ .ErrorMessage }}</div>
+            <div class="error-message" style="padding: 20px ;color: tomato;">{{ .ErrorMessage }}</div>
             {{ end }}
             <div class="form-control">
                 <input type="text" name="username" required>
                 <label>Username</label>
             </div>
             <div class="form-control">
-                <input type="text" name="email" required>
+                <input type="email" name="email" required>
                 <label>Email </label>
             </div>
             <div class="form-control">
