--- a/templates/filter1.html
+++ b/templates/filter1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style2.css">
     <title>TalentHub</title>
 </head>
 
@@ -34,7 +34,7 @@
                     </a>
                 </div> 
                 {{else}}
-            <img class="sBtn-text" src="profile.png" alt="Profile">
+            <img class="sBtn-text" src="/static/profile.png" alt="Profile">
             <ul class="menu-options" style="display: none; color: white;font-size: 18px; text-decoration: none;">
                 <li class="menu-item">
                     <span class="material-symbols-outlined">person</span>
@@ -99,7 +99,7 @@
         <div class="main-flex">
             <div class="main-feed">
                 <div class="new-tweet">
-                    <img src="profile.png" alt="" class="tweet-img">
+                    <img src="/static/profile.png" alt="" class="tweet-img">
                     <div class="new-tweet-details">
                         <input type="text" placeholder="What's happening?">
                     </div>
@@ -155,7 +155,7 @@
                 </script>
                 {{range .Posts}}
                 <div class="feed-tweet">
-                    <img src="profile.png" alt="" class="tweet-img">
+                    <img src="/static/profile.png" alt="" class="tweet-img">
                     <div class="feed-tweet-detail">
                         <div class="tweet-details">
                             <div class="tweet-user-info">
@@ -185,11 +185,10 @@
                                         </button>
                                     </div>
                                 </form>
-                            </div>
-                            <a href="/commentaires?postId={{.Id}}">
-                            <div class="comments">
-                                <i class="material-icons-outlined">chat_bubble</i>
-                                <p>{{.Commentcount}}</p>
+                                <a href="/commentaires?postId={{.Id}}" class="comment-btn">
+                                    <i class="material-icons-outlined">mode_comment</i>
+                                    <span class="count">{{.Commentcount}}</span>
+                                </a>
                             </div>
                         </a>
                             <div class="categorie">#{{.Topic}}</div>
