--- a/templates/login.html
+++ b/templates/login.html
@@ -29,10 +29,8 @@
 
             <button type="submit">Sign In</button>
             <div class="form-help"> 
-                <div class="remember-me">
                     <input type="checkbox" id="remember-me">
-                    <label for="remember-me">Remember me</label>
-                </div>
+                    <label for="form-help">Remember me</label>
             </div>
         </form>
         
