--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
             </div>
 
             <button type="submit">Sign In</button>
-            <div class="form-help"> 
+            <div class="remember-me"> 
                     <input type="checkbox" id="remember-me">
                     <label for="form-help">Remember me</label>
             </div>
